--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,61 +1,145 @@
-.home_main_cont{
+.home-cont{
+  width: 100%;
+  height: 100%;
+}
+.myhome{
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+.left-cont{
+width: 50%;
+height: 100%;
+}
+.myimg{
   width: 100%;
   height: 100vh;
-  display: flex;
-  box-sizing: border-box;
 }
-.left_cont{
-  width: 50%;
-  background-color: black;
-  display: flex;
-  flex-direction: column;
-  padding: 1%;
-}
-.home-head{
-  font-family: 'Times New Roman', Times, serif;
-  color: white;
-  text-align: left;
-}
-.right_main_cont{
+.right-cont{
   width: 50%;
   height: 100vh;
-}
-.right_btn{
-  margin: 1%;
-  height: 7%;
+  padding: 20px;
   display: flex;
-  justify-content: flex-end;
+  background-color: rgb(222, 225, 225);
 }
-.right_cont{
-  height: 90%;
+.right-body{
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  padding-left: 5%;
-  padding-right: 5%;
+  justify-content: center;   
 }
-.right-center{
+.right-body h3{
+  color: #660000;
+  font-weight: 800;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.right-body h4{
+  padding-top: 20px;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.myinfo{
+  width: 80%;
+  padding-top: 10px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.start{
+  font-weight: 500;
+  border-radius: 8px;
+  height: 45px;
+  background-color: orange;
+  width: 40%;
+}
+
+.logbtn{
+  text-align: center;
   align-items: center;
 }
-.image{
-  margin-top: 10%;
-  margin-left: 17%;
-  width: 60%;
-  height: 60%;
+
+
+@media (max-width: 768px) {
+.myhome{
+  width: 100%;
+  flex-direction: column;
+}
+.right-cont{
+  width: 100%;
+  height: 50%;
+  padding: 20px;
+  display: flex;
+  background-color: rgb(222, 225, 225);
+}
+.left-cont{
+  width: 100%;
+  height: 50%;
+}
+.start{
+  width: 40%;
+}
+
 
 }
-@media(max-width: 750px){
-  .home_main_cont{
-    flex-direction: column;
-  }
-  .left_cont{
-    width: 100%;
-  }
-  .right_main_cont{
-    width: 100%;
-    padding: 5px;
-  }
-  .right_btn{
-    height: 10%;
-  }
+
+@media (max-width: 576px) {
+.myhome{
+  width: 100%;
+  flex-direction: column;
+}
+
+.right-cont{
+  width: 100%;
+  height: 50%;
+  padding: 20px;
+  display: flex;
+  background-color: rgb(222, 225, 225);
+}
+  .left-cont{
+  width: 100%;
+  height: 50%;
+}
+.start{
+  width: 50%;
+}
+}
+
+
+
+@media (max-width: 400px) {
+  
+.myhome{
+  width: 100%;
+  flex-direction: column;
+}
+.left-cont{
+  width: 100%;
+  height: 50%;
+}
+.myimg{
+  width: 100%;
+  height: 100vh;
+}
+.right-cont{
+  width: 100%;
+  height: 50%;
+  padding: 20px;
+  display: flex;
+  background-color: rgb(222, 225, 225);
+}
+
+.right-body h3{
+  color: #660000;
+  font-size: 22px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.right-body h4{
+  font-size: 15px;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.myinfo{
+  /* width: 80%; */
+  font-size: 12px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.start{
+  width: 50%;
+}
+
 }
