--- a/src/components/SignUp/signup.css
+++ b/src/components/SignUp/signup.css
@@ -1,108 +1,103 @@
-.signup-main-cont{
-    height: 100%;
-    width: 100%;
+.signup-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 80vh;
+  background-color: #f9f9f9;
+  padding: 20px;
 }
-    .signup-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-    height: 100vh;
-    padding: 20px;
-    background-color: #f8f9fa;
-    }
-    
-    .signup-cont {
-    display: flex;
-    flex-direction: row;
-    background: #fff;
-    box-shadow: 0px 0px 0px 0.1px rgba(0, 0, 0, 0.4);
-    border-radius: 10px;
-    width: 70%;
-    }
-    
-    .signupImg {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* padding: 20px; */
-    width: 50%;
-    }
-    
-    .signupImg img {
-    width: 100%;
-    border-radius: 10px;
-    }
-    
-    .signup-form {
-    padding: 20px;
-    width: 50%;
-    }
-    
-    .heading {
-    text-align: center;
-    font-weight: 600;
-    color: rgb(239, 8, 108);
-    }
-    
-    .google-signup {
-    text-align: center;
+
+.signup-cont {
+  width: 100%;
+  max-width: 400px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  text-align: center;
+}
+
+.signup-form {
+  width: 100%;
+}
+
+.heading {
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+.form-group {
+  margin-bottom: 15px;
+  text-align: left;
+}
+
+label {
+  padding-left: 4px;
+  font: bold;
+}
+
+input.form-control {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.myform {
+  margin-top: 15px;
+}
+
+
+@media (min-width: 768px) {
+  .signup-cont {
+      max-width: 500px;
+      padding: 30px;
+  }
+
+}
+
+@media (min-width: 1024px) {
+  .signup-container {
+      padding: 40px;
+  }
+
+  .signup-cont {
+      max-width: 600px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+  }
+
+  .signup-form {
+      padding: 20px;
+  }
+
+}
+
+@media (min-width: 1440px) {
+  .signup-cont {
+      max-width: 600px;
+  }
+  .signup-form {
+    padding: 40px;
+ }
+
+  .heading {
+      font-size: 30px;
+      font-weight: 600;
+      color: #a81f00;
+  }
+
+  button.btn {
+      color: white;
+      background-color:  #a81f00ce;
+      border: none;
+      outline: none;
+  }
+  button.btn:hover{
+    background-color:  #a81f00;
     color: white;
-    }
-    .google-signup button {
-    outline: none;
-    border: 1px solid rgba(128, 128, 128, 0.373);
-    background: transparent;
-    border-radius: 15px;
-    }
-    .google-signup button:hover {
-    border: 2px solid gray;
-    
-    }
-    .myform {
-    text-align: center;
-    }
-    
-    
-    @media (max-width: 1024px) {
-    .signup-cont {
-    width: 90%; 
-    flex-direction: row;
-    }
-    
-    .signupImg {
-    width: 50%;
-    }
-    
-    .signup-form {
-    width: 50%;
-    position: relative;
-    }
-    }
-    
-    
-    @media (max-width: 768px) {
-    
-    .signup-container{
-    width: 100%;
-    height: 100vh;
-    }
-    
-    .signup-cont {
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    }  
-    .signupImg{
-    width: 300px;
-    }
-    .signup-form{
-    width: 100%;
-    height: 60%;
-    font-size: 12px;
-    }
-    .heading{
-    font-size: 20px;
-    }
-    
-    }
+  }
+
+}
