--- a/src/components/Todolist/todolist.css
+++ b/src/components/Todolist/todolist.css
@@ -1,228 +1,338 @@
 .todo-main-cont{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: row;
-  }
-  .sidebar-main-cont{
-    width: 20%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-   background-color: #fcfaf8;
-    /* border: 1px solid black; */
-    padding: 10px;
-  }
-  .sidebar-main-cont button{
-    margin: 10px 0px;
-    padding: 10px;
-  }
-  .sidebar-main-cont select{
-    margin: 10px 0px;
-    padding: 10px;
-  }
-  .side-button{
-  
-    width: 100%;
-    /* border: 1px solid black; */
-  }
-  .side-button button{
-  
-    background-color: transparent;
-    border: none;
-  }
-  .side-btn-cont{
-  
-    width: 100%;
-  
-  }
-  .side-btn-cont button{
-  
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: start;
-    justify-content: start;
-  
-  }
-  .add-cont button{
-  
-    border: none;
-    background-color: transparent;
-  }
-  .plusAdd{
-  
-     font-size: 25px;
-     color: #a81f00;
-  }
-  
-  .searchinput{
-    outline: none;
-  }
-  
-  
-  
-  
-  .priority-section option{
-  
-    border: none;
-    outline: none;
-  }
-  
-  .side-button button:hover{
-  
-    background-color: #f5eaea;
-    color: #a81f00;
-  } 
-  
-  
-  
-  button:focus{
-  
-    outline: none;
-  }
-  .main-cont{
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    justify-content: left;
-    padding: 25px;
-  }
-  .addbtn{
-    padding: 5px;
-    margin: 5px;
-  }
-  .filter-button{
-    display: flex;
-    flex-direction: column;
-  }
-  .form-container{
-    display: flex;
-    flex-direction: column;
-    padding: 15px;
-    border: 1px solid black;
-    border-radius: 15px;
-  }
-  .form-container input{
-    margin: 5px;
-    border-radius: 8px;
-  }
-  .form-container textarea{
-    margin: 5px;
-    border-radius: 8px;
-  }
-  .form-container select{
-    margin: 5px;
-    border-radius: 8px;
-    padding: 10px;
-  }
-  .form-container button{
-    margin: 5px;
-    border-radius: 8px;
-    padding: 10px 15px;
-    margin-left: 5px;
-  }
-  .btndiv{
-    display: flex;
-    justify-content: flex-end;
-  }
-  .ul-list-cont{
-    list-style: none;
-  }
-  .list-cont{
-    width: 100%;
-    margin: 5px;
-    padding: 10px;
-  }
-  .data-cont{
-    width: 100%;
-    border-top: 1px solid grey;
-    border-bottom: 1px solid grey;
-    margin: 5px;
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
-  }
-  .list-item{
-    width: 50%;
-  }
-  .list-item-lower{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-  }
-  .list-upper-part{
-    display: flex;
-    gap: 2%;
-  }
-  .check-title{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .title-desc{
-    display: flex;
-    
-  }
-  .functionbtn{
-    width: 50%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  }
-  .icon{
-    margin: 5px;
-    font-size: 25px;
-    color: #a81f00;
-  }
-  
-  .right-addbtn button{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+.sidebar-main-cont{
+  width: 20%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+ background-color: #fcfaf8;
+  /* border: 1px solid black; */
+  padding: 10px;
+}
+.sidebar-main-cont button{
+  margin: 10px 0px;
+  padding: 10px;
+}
+.sidebar-main-cont select{
+  margin: 10px 0px;
+  padding: 10px;
+}
+.side-button{
+
+  width: 100%;
+  /* border: 1px solid black; */
+}
+.side-button button{
+
   background-color: transparent;
   border: none;
-  
-  }
-  
-  .btndiv button{
-  
-    background-color: #a81f00;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-  }
-  
-  .title-des-comment-content{
-  
-    border-top: 1px solid rgb(167, 164, 164);
-    border-bottom: 1px solid rgb(180, 179, 179);
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  
-  }
-  
-  .checkbox-box{
-  
-    margin-right: 15px;
-  }
-  
-  .left-cont-check-des{
-  
-    display: flex;
-  
-  }
-  
-  ul{
-  
-    list-style: none;
-  }
-  
-  .form-container input{
-  
+}
+.side-btn-cont{
+
+  width: 100%;
+
+}
+.side-btn-cont button{
+
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: start;
+  justify-content: start;
+
+}
+.add-cont button{
+
+  border: none;
+  background-color: transparent;
+}
+.plusAdd{
+
+   font-size: 25px;
+   color: #a81f00;
+}
+
+.searchinput{
   outline: none;
-  }
+}
+
+.priority-section select{
+
+  border: none;
+  outline: none;
+  width: 100%;
+  background-color: #fcfaf8;;
+}
+
+.side-button button:hover{
+
+  background-color: #f5eaea;
+  color: #a81f00;
+} 
+
+
+
+button:focus{
+
+  outline: none;
+}
+.main-cont{
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  padding: 25px;
+  background-color: #e5e7eb;
+}
+.addbtn{
+  padding: 5px;
+  margin: 5px;
+}
+.filter-button{
+  display: flex;
+  flex-direction: column;
+}
+.form-container{
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+  border: 1px solid black;
+  border-radius: 15px;
+}
+.form-container input{
+  margin: 5px;
+  border-radius: 8px;
+}
+.form-container textarea{
+  margin: 5px;
+  border-radius: 8px;
+}
+.form-container select{
+  margin: 5px;
+  border-radius: 8px;
+  padding: 10px;
+}
+.form-container button{
+  margin: 5px;
+  border-radius: 8px;
+  padding: 10px 15px;
+  margin-left: 5px;
+}
+.btndiv{
+  display: flex;
+  justify-content: flex-end;
+}
+.ul-list-cont{
+  list-style: none;
+  border-radius: 12px;
+}
+.list-cont{
+  width: 100%;
+  margin: 5px;
+  padding: 10px;
+}
+.data-cont{
+  width: 100%;
+  border-top: 1px solid grey;
+  border-bottom: 1px solid grey;
+  margin: 5px;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+.list-item{
+  width: 50%;
+}
+.list-item-lower{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.list-upper-part{
+  display: flex;
+  gap: 2%;
+}
+.check-title{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.title-desc{
+  display: flex;
   
-  .form-container textarea{
+}
+.functionbtn{
+  width: 50%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.icon{
+  margin: 5px;
+  font-size: 25px;
+  color: #a81f00;
+}
+
+.right-addbtn button{
+background-color: transparent;
+border: none;
+position: relative;
+right: 20px;
+}
+
+.btndiv button{
+
+  background-color: #a81f00;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+}
+
+.title-des-comment-content{
+
+  border-top: 1px solid rgb(167, 164, 164);
+  /* border-bottom: 1px solid rgb(180, 179, 179); */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+}
+
+.checkbox-box{
+
+  margin-right: 15px;
+}
+
+.left-cont-check-des{
+
+  display: flex;
+
+}
+ul{
+
+  list-style: none;
+}
+.form-container{
   
-    outline: none;
-  }
+  background-color: rgb(252, 251, 250);
+  width: 50%;
+
+  border: none;
+  
+}
+.form-container input{
+
+outline: none;
+}
+
+.form-container textarea{
+
+  outline: none;
+}
+
+.save-cont{
+
+  background-color: rgb(248, 245, 245);
+  border-radius: 10px;
+  padding: 10px;
+  margin-bottom: 10px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); 
+
+}
+
+
+
+
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; 
+}
+
+/* Popup Container */
+.popup-container {
+  background-color: white;
+  padding: 20px;
+  border-radius: 12px; 
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); 
+  width: 30%; 
+  height: 70%;
+  max-width: 800px;
+  max-height: 600px; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden; 
+}
+
+
+.form-container {
+  width: 100%; 
+  height: 100%; 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; 
+  padding: 20px;
+ 
+  border-radius: 8px; 
+}
+
+.form-container input,
+.form-container textarea,
+.form-container select {
+  width: 100%; 
+  padding: 10px;
+  margin: 10px 0;
+  border-radius: 6px; 
+  font-size: 16px; 
+  outline: none; 
+}
+
+.form-container input:focus,
+.form-container textarea:focus,
+.form-container select:focus {
+  border-color: #a81f00; 
+  box-shadow: 0 0 5px rgba(168, 31, 0, 0.5); 
+}
+
+.form-container .btndiv {
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+  margin-top: 20px;
+}
+
+.form-container .btndiv button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 6px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease; 
+}
+
+.form-container .btndiv button:first-child {
+  background-color: #a81f00; 
+  color: white;
+}
+
+.form-container .btndiv button:last-child {
+  background-color: #ddd; 
+  color: #333;
+}
+
+.form-container .btndiv button:hover {
+  opacity: 0.9; 
+}
