--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,145 +1,160 @@
-.home-cont{
+.home-cont {
   width: 100%;
   height: 100%;
-}
-.myhome{
-  width: 100%;
-  height: 100%;
-  display: flex;
-}
-.left-cont{
-width: 50%;
-height: 100%;
-}
-.myimg{
-  width: 100%;
-  height: 100vh;
-}
-.right-cont{
-  width: 50%;
-  height: 100vh;
-  padding: 20px;
-  display: flex;
-  background-color: rgb(222, 225, 225);
-}
-.right-body{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;   
-}
-.right-body h3{
-  color: #660000;
-  font-weight: 800;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-.right-body h4{
-  padding-top: 20px;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-.myinfo{
-  width: 80%;
-  padding-top: 10px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-.start{
-  font-weight: 500;
-  border-radius: 8px;
-  height: 45px;
-  background-color: orange;
-  width: 40%;
+  box-sizing: border-box;
 }
 
-.logbtn{
-  text-align: center;
+.myhome {
+  width: 100%;
+  height: 100vh;
+  background-image: url("../../assets/home1.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-}
-
-
-@media (max-width: 768px) {
-.myhome{
-  width: 100%;
-  flex-direction: column;
-}
-.right-cont{
-  width: 100%;
-  height: 50%;
   padding: 20px;
-  display: flex;
-  background-color: rgb(222, 225, 225);
-}
-.left-cont{
-  width: 100%;
-  height: 50%;
-}
-.start{
-  width: 40%;
+  box-sizing: border-box;
 }
 
-
-}
-
-@media (max-width: 576px) {
-.myhome{
-  width: 100%;
-  flex-direction: column;
-}
-
-.right-cont{
-  width: 100%;
-  height: 50%;
+.myinfo {
+  background-color: rgba(255, 255, 255, 0.8);
   padding: 20px;
-  display: flex;
-  background-color: rgb(222, 225, 225);
+  border-radius: 10px;
+  max-width: 600px;
+  width: 70%;
 }
-  .left-cont{
-  width: 100%;
-  height: 50%;
+
+.head {
+  font-size: 2.5rem;
+  font-weight: 500;
 }
-.start{
-  width: 50%;
+
+.todo {
+  font-size: 3rem;
+  color: red;
+  font-weight: 700;
 }
+
+h4 {
+  font-size: 1.5rem;
+  margin: 10px 0;
+  font-family: Lucida Sans;
+}
+
+.para {
+  font-size: 1rem;
+  margin: 20px 0;
+  line-height: 1.5;
+}
+
+.mybtn {
+  width: 60%;
+  max-width: 600px;
+  background-color: rgba(253, 73, 8, 0.825);
+  height: 50px;
+  font-size: 18px;
+  color: white;
+  border-radius: 20px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.mybtn:hover {
+  background-color: rgb(253, 73, 8);
+}
+
+.logbtn {
+  margin-top: 20px;
+}
+
+.mylogoutbtn {
+  background-color: red;
+  border-radius: 5px;
+  color: white;
+  border: none;
+  outline: none;
+  width: 60%;
+  max-width: 200px;
+  height: 40px;
+  text-align: center;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.mylogoutbtn:hover {
+  background-color: darkred;
 }
 
 
+@media (min-width: 1024px) {
+  .myhome {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
 
-@media (max-width: 400px) {
+  .myinfo {
+    text-align: left;
+    padding: 20px;
+    width: 50%;
+    background-color: transparent;
+  }
+  .para{
+    font-weight: 400;
+  }
+  .logbtn{
+    position: relative;
+    bottom:50%;
+  }
+  .mylogoutbtn{
+    width: 100px;
+    height: 45px;
+   
+  }
+
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .myhome {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .myinfo {
+    text-align: center;
+    width: 70%;
+  }
+  .mylogoutbtn{
+    width: 150px;
+    background-color: red;
+    height: 50px;
+    font-size: 18px;
+    color: white;
+    border-radius: 20px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    }
   
-.myhome{
-  width: 100%;
-  flex-direction: column;
-}
-.left-cont{
-  width: 100%;
-  height: 50%;
-}
-.myimg{
-  width: 100%;
-  height: 100vh;
-}
-.right-cont{
-  width: 100%;
-  height: 50%;
-  padding: 20px;
-  display: flex;
-  background-color: rgb(222, 225, 225);
 }
 
-.right-body h3{
-  color: #660000;
-  font-size: 22px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-.right-body h4{
-  font-size: 15px;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-.myinfo{
-  /* width: 80%; */
-  font-size: 12px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-.start{
-  width: 50%;
-}
 
+@media (max-width: 767px) {
+  .myhome {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .myinfo {
+    text-align: center;
+    width: 90%;
+    padding: 15px;
+  }
+  
+  .mylogoutbtn {
+    width: 200px;
+  }
 }
